# element_project_generator

./: README.md  main.py  pyproject.toml
.github/workflows/: published.yaml
main/: element_project_generator-0.1.0-py3-none-any.whl  element_project_generator-0.1.1-py3-none-any.whl
templates/: README.md  main.py  template.yaml  template_proj.py
